<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppFactory</string>
    <string name="menu">菜单</string>
    <string name="more">更多</string>
    <string name="home">首页</string>
    <string name="order">订单</string>
    <string name="shopping_trolley">购物车</string>
    <string name="double_press_exit_app">再次点击退出程序</string>
    <string name="xml_getdata_error">获取数据异常!</string>
    <string name="xml_loading_01">正在加载中&#8230;</string>
    <string name="xml_loading">数据加载中&#8230;</string>

    <!-- more infomation -->
    <string name="company_info_str">企业信息</string>
    <string name="contact_us_str">联系我们</string>
    <string name="update_version_str">版本更新</string>
    <string name="recent_view_str">最近浏览</string>
    <string name="favorite_str">我的收藏</string>
    <string name="support_str">技术支持</string>
    <string name="about_str">关于软件</string>
    <string name="none_article">暂无文章，请返回</string>

    <string name="xml_article_list">文章列表</string>
    <string name="xml_no_article">暂无文章,请返回!</string>
</resources>